# bitsNovels

./: .coverage  .gitignore  AGENTS.md  CONSTRAINTS.md  CONTEXT.md  DESIGN_SYSTEM.md  DOC_ORGANIZATION.md  INDEX.md  LICENSE  PROCESS_TDD.md  README.md  SPRINT_LOG.md  USER_STORIES.md  pyrightconfig.json
workspace/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_final.txt  test_output.txt  test_output2.txt
workspace/.github/workflows/: ci.yml
workspace/apps/web/: .env.example  README.md  coverage-report.json  fix_lint.js  fix_lint.sh  fix_tsc.js  fix_typecheck.js  index.html  lint-results.json  package.json  vite.config.ts
workspace/bitsnovels_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workspace/docs/: CHANGELOG.md
workspace/docs/refactor/: component-checklist.md  component-refactor-manual.md  impact-analysis.md  prompt-chain.md  tech-debt-board.md  test-matrix.md
workspace/e2e/: auth.spec.ts  helpers.ts  projects.spec.ts
workspace/playwright-report/: index.html
workspace/scripts/: ensure_python_env.mjs  export_openapi.py  run_export_openapi.mjs  run_python.mjs  validate_api_types.mjs
workspace/server/: config.py  main.py  openapi.json
workspace/server/models/: ai_models.py  kb_models.py  request_models.py
workspace/server/routes/: __init__.py  _deps.py  auth.py  projects.py  us14_settings.py  us15_outline.py  us16_goals.py  us17_trash.py  us18_archive.py  us210_settings.py  us21_parser.py  us22_character.py  us23_location.py  us24_item.py  us25_faction.py  us26_foreshadow.py  us41_ai.py  (+13 more)
(+386 files in other folders)
